--- a/frontend-post-management/package.json
+++ b/frontend-post-management/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.459.0",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
@@ -16,7 +20,9 @@
     "react-scripts": "5.0.1",
     "react-status-alert": "^1.4.1",
     "react-toastify": "^10.0.6",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.15",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.14"
   }
 }
